turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: STOP is already defined as value STOP
val STOP = 0
    ^Turmite:6: error: STOP  is already defined as value STOP
val STOP = 0
    ^Turmite:18: error: not found: value i
  while (couleurSol != colors(i) && i<l){
                              ^Turmite:18: error: not found: value i
  while (couleurSol != colors(i) && i<l){
                                    ^